<resources>
    <!--Facebook app ID-->
    <string name="facebook_app_id">492346584450224</string>
    <string name="fb_login_protocol_scheme">fb492346584450224</string>
    <string name="google_android_map_api_key">AIzaSyBOWlVQ5OLX9XM9T4JboBKlNgClRsWznI0</string>
    <string name="streetview_api_key">AIzaSyBy1W27MKbrzbn54k1s49s5wfGku_hhV5w</string>

    <string name="streetview_api_url">https://maps.googleapis.com/maps/api/streetview?size=%2$sx%3$s&amp;location=%1$s&amp;pitch=-0.76&amp;key=AIzaSyBy1W27MKbrzbn54k1s49s5wfGku_hhV5w</string>

    <string name="app_name">EVA</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="paswoord">Paswoord</string>
    <string name="repeat_paswoord">Herhaal paswoord</string>
    <string name="sign_up">Registreer</string>
    <string name="registreer"><u>Nog geen account?</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_maps_route">Toon routebeschrijving</string>
    <string name="bel">Bel </string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="hours_remaining"> uren resterend!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_challenge">Nieuwe uitdaging in </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="take_picture">Neem foto</string>
    <string name="link_challenge">Link challenge</string>
    <string name="share_vegagram">Share on Vegagram</string>
    <string name="share_facebook">Share on Facebook</string>
    <string name="save">Save</string>
    <string name="retake">Retake</string>

    <string name="show_public">Public posts</string>
    <string name="show_private">Private posts</string>
    <string name="delete_post">Delete post</string>
    <string name="reward_dialog">Proficiat! Aan deze dag zat een beloning vast! U kunt uw belonging ophalen bij de volgende workshop!</string>
    <string name="claim">Bevestig</string>
    <string name="veganistisch_eten">Door in dit restaurant te eten maakt u een bewuste keuze voor het welzijn van mens, dier en planeet.
        Hiertoe streven wij ernaar om in het geheel af te zien van het gebruik van dieren en producten van dierlijke herkomst</string>

    <!--Days of the week (short)-->
    <string name="monday">Ma</string>
    <string name="tuesday">Di</string>
    <string name="wednesday">Woe</string>
    <string name="thursday">Do</string>
    <string name="friday">Vrij</string>
    <string name="saturday">Za</string>
    <string name="sunday">Zo</string>
    <string name="not_found">-</string>

    <!--Difficulty levels-->
    <string name="easy">Makkelijk</string>
    <string name="medium">Gemiddeld</string>
    <string name="hard">Moeilijk</string>

    <!--Core buttons-->
    <string name="todays_challenge">Todays\' challenge</string>
    <string name="vegagram">Vegagram</string>
    <string name="tips_and_tricks">Tips and Tricks</string>
    <string name="nearby_restaurants">Nearby restaurants</string>

    <!--ERROR MESSAGES-->
    <string name="google_maps_error">Google maps couldn\'t load that adress :(</string>
    <string name="error">An error occured, try again later!</string>
    <string name="loading">Ophalen ...</string>
    <string name="error_login">invalid username or password</string>
</resources>
