<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="82dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/eva_white"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email" />

            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/paswoord"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textColor="@color/eva_white"
            android:text="@string/login"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/fb_blue"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp" />

        <TextView android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/registreer"
            android:gravity="center"
            android:textSize="16dip"/>


    </LinearLayout>